--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
     </nav>
 </header>
 
-<section class="color-data">
-<input type="text" placeholder="Enter Your Color Name" id="colorName">
+<section class="color-data" id="color_name_data">
+    
+    <input type="text" placeholder="Enter Your Color Name" value="" id="colorName">
+    <button id="nameBtn">click me </button>
 </section>
 
 </main>
 
+<script src="assets/js.js"></script>
 </body>
 </html>
